app/assets/css/home.css
/* Homepage CSS */

@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 10px;
  font-family: 'Poppins', sans-serif;
}

body {
  background-color: #fff;
  height: 100vh;
  overflow: hidden;
}

a {
  text-decoration: none;
  color: #33373b;
  font-size: 1.5rem;
  line-height: 24px;
}

.homepage {
  display: flex;
  justify-content: space-between;
  height: 100%;
}
/* Header (Sidebar) Section*/

.fixed-header {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  /* position: fixed; */
  height: 100%;
  width: 29%;
  padding: 10px 10px 10px 10%;
}
/* .logo-icon {
  height: 28px;
} */

/* Side Nav bar*/
.nav-links {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  /* height: 70%; */
}

.nav-links a {
  display: flex;
  align-items: center;
  font-size: 2rem;
  padding: 8px 25px 8px 8px;
  width: fit-content;
  margin-bottom: 20px;
}

.nav-links a i {
  font-size: 3rem;
  margin-right: 15px;
}

.nav-links a:hover,
.main-account a:hover {
  background-color: rgb(15, 20, 25, 0.1);
  border-radius: 9999px;
}

.nav-links a:first-child {
  padding: 8px;
  color: #1d9bf0;
}

.nav-links a:first-child:hover {
  background-color: rgb(29, 155, 240, 0.1);
}

.nav-links a:first-child i {
  margin: 0;
}

.link--active {
  color: #0f1419;
  font-weight: 700;
}

.nav-search,
.hidden-nav-item {
  display: none !important;
}

.btn {
  background-color: rgb(29, 155, 240);
  color: #fff;
  font-size: 1.7rem;
  font-weight: 700;
  border: none;
  /* height: 55px; */
  border-radius: 9999px;
  cursor: pointer;
  transition: 0.2s;
}

.nav-tweet-button {
  /* width: 90%; */
  /* padding: 3vh 4vh; */
  /* height: 50px; */
  margin-top: 15px;
  padding: 3vh 0;
}

.nav-tweet-button i {
  display: none;
}

.btn:hover {
  background-color: rgba(28, 141, 216);
}

.blue-icons-hovered {
  border-radius: 50%;
  padding: 1rem;
}

.blue-icons-hovered:hover {
  color: #1d9bf0;
  background-color: rgb(29, 155, 240, 0.1);
}

/* Main account div*/
.main-account {
  width: 100%;
  /* height: 30%; */
  /* padding-top: 120px; */
}

.main-account a {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 8px 10px 15px;
  margin-right: 10px;
  max-width: 100%;
}

.profile-circle-img {
  background-color: #1d9bf0;
  width: 38px;
  height: 38px;
  border-radius: 50%;
}

.account-details {
  display: flex;
  flex-direction: column;
  width: 80%;
  margin-left: 10px;
  font-size: 1.5rem;
  line-height: 20px;
}

.account-full-name {
  font-weight: 700;
}

.account-username {
  color: #717f8a;
}

/* text overflow*/
.dotted-overflow {
  display: block;
  max-width: 90%;
  white-space: nowrap;
  overflow: hidden !important;
  text-overflow: ellipsis;
}

/* Main Section*/
main {
  width: 71%;
  height: 100%;
  /* margin-left: 29%; */
  overflow-y: auto;
}

.main-flex {
  display: flex;
  width: 100%;
}

.main-feed {
  width: 60%;
  border-left: 1px solid rgb(29, 155, 240, 0.1);
  border-right: 1px solid rgb(29, 155, 240, 0.1);
}

.home-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 55px;
  width: 100%;
  font-size: 2rem;
  font-weight: 700;
  color: #0f1419;
  padding: 0 15px;
  position: sticky;
  top: 0;
  background-color: rgb(255, 255, 255, 0.9);
}

/* New Tweet Form*/
.new-tweet {
  display: flex;
  width: 100%;
  height: 120px;
  padding: 4px 16px;
}

.new-tweet a img {
  width: 48px;
  height: 48px;
  cursor: pointer;
}

.create-tweet {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  width: 100%;
  padding-top: 4px;
  margin-left: 12px;
}

.new-tweet-actions {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 60px;
  border-top: 1px solid rgb(15, 20, 25, 0.1);
}

.tweet-text {
  width: 100%;
  height: 24px;
  border: none;
  background-color: #fff;
  font-size: 2rem;
  outline: none;
  color: #0f1419;
  font-weight: 400;
  padding: 2px 10px;
  margin-bottom: 20px;
}

.new-tweet-actions i {
  color: #1d9bf0;
  cursor: pointer;
  font-size: 3rem;
}

.new-tweet-btn {
  /* padding: 1.5rem 3rem; */
  width: 75px;
  height: 35px;
  margin: 0;
  font-size: 1.5rem;
  font-weight: 700;
}

/* Tweet Section*/
.feed-tweet {
  display: flex;
  width: 100%;
  min-height: 100px;
  padding: 12px 16px 0 16px;
  border-top: 1px solid rgb(15, 20, 25, 0.1);
  cursor: pointer;
}

.tweet-details {
  display: flex;
  flex-direction: column;
  margin-left: 12px;
  width: 100%;
}

.feed-tweet i {
  color: #536471;
  font-size: 2rem;
}

.tweet-account-details {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  font-size: 1.5rem;
}

.user-details {
  color: #1f2429;
  font-weight: 700;
}

.user-details span {
  color: #536471;
  font-weight: 400;
  margin-left: 3px;
}

.tweet-body {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.tweet-body-text {
  font-size: 1.5rem;
  line-height: 20px;
  color: #000;
  font-weight: 400;
  height: auto;
}

.tweet-image {
  width: 100%;
  max-height: 700px;
  margin-top: 10px;
}

.tweet-image img {
  max-width: 98%;
  height: 100%;
  background-color: #000;
  border-radius: 16px;
}

.tweet-icons {
  display: flex;
  justify-content: center;
  width: 100%;
  margin-top: 15px;
}

.icon-item {
  color: #5e6e7b;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 2px;
}

.pink-icons-hovered {
  padding: 1rem;
  border-radius: 50%;
}

.icon-item .pink-icons-hovered {
  margin-right: 0.75rem;
  font-size: 2rem;
}

.icon-item:hover {
  color: rgb(249, 24, 128);
}

.icon-item:hover i {
  color: rgb(249, 24, 128);
  background-color: rgb(249, 24, 128, 0.1);
}

/* Right Side*/
.right-side-explore {
  width: 40%;
  padding: 0 2%;
}

/* serch input*/
.search-bar {
  height: 55px;
  width: 100%;
  position: sticky;
  top: 0;
  background-color: rgb(255, 255, 255, 0.9);
}
.search {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  max-width: 355px;
  border-radius: 9999px;
  background-color: #eff3f4;
  /* width: 100%; */
  padding-left: 10px;
  color: #8e9aa3;
  font-size: 3rem;
  margin-top: 5px;
}

.form-search {
  display: flex;
  align-items: center;
}

.search i,
.form-search {
  padding: 1rem;
  background-color: none;
}

.form-search input {
  border: none;
  outline: none;
  padding: 5px 2px;
  width: 100%;
  background-color: transparent;
}

/*who to follow*/
.people-follow {
  display: flex;
  flex-direction: column;
  /* height: 270px; */
  max-width: 355px;
  border-radius: 16px;
  background-color: #f7f9f9;
  margin-top: 16px;
}

.title {
  font-size: 2rem;
  font-weight: 800;
  margin: 12px 16px;
}

.follow-profile {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: 5px;
  padding: 30px 15px;
  max-width: 100%;
  height: 80px;
  cursor: pointer;
  border-top: 1px solid rgb(15, 20, 25, 0.1);
}

.follow-details {
  display: flex;
  flex-direction: column;
  margin-left: 10px;
  width: 80%;
}

.follow-cont-img {
  width: 20%;
}

.follow-details a {
  font-size: 1.4rem;
  font-weight: 700;
}

.follow-details a:hover {
  text-decoration: underline;
}

.follow-details span {
  color: #63727e;
  font-size: 1.4rem;
  font-weight: 400;
}

.status {
  background-color: rgb(15, 20, 25, 0.1);
  border-radius: 3px;
  font-size: 1.35rem !important;
  padding: 2px 4px;
  font-weight: 300 !important;
  text-align: center;
  margin-top: 5px;
}

.follow-btn {
  color: #fff;
  background-color: #000;
  width: 10vh;
  height: 35px;
  margin: 0 0 0 12px;
  font-weight: 600;
  font-size: 1.5rem;
}

.follow-btn:hover {
  color: #fff;
  background-color: #000;
}

.follow-profile:hover {
  background-color: rgb(0, 0, 0, 0.03);
  border-radius: 7px;
}

.follow-cont {
  display: flex;
  justify-content: space-between;
  width: 70%;
}

.btn-cont {
  flex-basis: 30%;
  width: 30%;
}

/*Media query*/
@media only screen and (max-width: 1260px) {
  .fixed-header {
    width: 20%;
    padding: 10px 10px 10px 5%;
    align-items: center;
  }

  main {
    /* margin-left: 10%; */
    width: 80%;
  }

  .fixed-header span {
    display: none;
  }

  .nav-tweet-button span {
    display: none;
  }

  .nav-tweet-button i {
    display: block;
    color: #fff;
    font-size: 1.7rem;
    font-weight: 600;
  }

  .fixed-header .nav-tweet-button {
    /* width: 55px; */
    border-radius: 50%;
    /* height: auto; */
    padding: 1.5rem;
  }

  .fixed-header .account-details {
    display: none;
  }

  .fixed-header .main-account {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .nav-links,
  .main-account {
    align-items: center;
  }

  .main-account a {
    align-items: center;
    border-radius: 50%;
    padding: 6%;
  }

  .nav-links a i,
  .main-account a {
    margin-right: 0;
  }

  .nav-links a {
    padding: 10px;
  }
}

@media only screen and (max-width: 987px) {
  .right-side-explore {
    display: none;
  }

  .main-feed {
    width: 80%;
  }

  .nav-search {
    display: block;
  }
}

@media only screen and (max-width: 500px) {
  .homepage {
    flex-direction: column-reverse;
    justify-content: center;
    height: 100%;
  }

  main {
    margin-left: 0;
    width: 100%;
    overflow-y: auto;
  }

  .main-flex {
    justify-content: center;
  }

  .fixed-header {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: auto;
    width: 100%;
    padding: 10px 30px 10px 15px;
    /* position: static; */
    /* overflow: hidden; */
  }

  .nav-links {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding: 0 12px;
  }

  .nav-links a {
    padding: 10px;
    align-items: center;
    justify-content: center;
    width: 50px;
    height: 50px;
  }

  .nav-links a,
  .nav-links a i {
    margin: 0;
  }

  .nav-tweet-button {
    margin: 0;
    padding: 1rem !important;
  }

  .hidden-nav-item {
    display: block !important;
  }
  .main-account,
  .nav-links a:first-child {
    display: none !important;
  }
}

